--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,19 +6,95 @@
 * {
     font-family: Helvetica;
 }
+
 body {
     background-color: gray;
+    height: 2000px;
 }
+
 header {
     text-align: center;
     margin: 20px auto;
 
 }
-.tablecaptions {
-    text-align: center;
-    margin-top: 50px;
+
+nav {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial;
+    position: static;
+    width: 100%;
+    top: 10;
 
 }
+
+nav a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;   
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+
+  /* Add a red background color to navbar links on hover */
+nav a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
+
+  /* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  /* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+.tablecaptions {
+    text-align: center;
+    margin-top: 100px;
+
+
+}
+
 table {
     position: relative;
     border: 2px solid black;
@@ -28,16 +104,19 @@ table {
     margin: 25px auto;
     
 }
+
 thead {
     background-color: rgba(220, 220, 220, 0.534);
     text-align: center;
 }
+
 .tag {
     width: 12%;
 }
 .name {
     width: 18%;
 }
+
 .desc {
     width: 70%;
 }
